--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,6 +31,11 @@
     /* Transitions */
     --transition-1: 0.25s ease;
     --transition-2: 0.5s ease-in-out;
+
+     --bg-color:#1f242d;
+    --second-bg-color:#323946;
+    --text-color:#fff;
+    --main-color:#0ef; 
   }
   
   html {
@@ -156,6 +161,21 @@
     align-items: center; /* Center text vertically */
   }
   
+  .social-media a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; 
+    width: 3rem;
+    height: 3rem; 
+    background: transparent; 
+    border: .2rem solid white;
+    border-radius: 50%;
+    font-size: 2rem;
+    color: white;
+     margin:  2rem 9px; 
+   
+    text-decoration: none
+}
   
   
   
@@ -165,42 +185,7 @@
   }
   
   
-  
-  :root {
-      /* Colors */
-      --jet: hsl(0, 0%, 22%);
-      --onyx: hsl(240, 1%, 17%);
-      --eerie-black-1: hsl(240, 2%, 13%);
-      --eerie-black-2: hsl(240, 2%, 12%);
-      --smoky-black: hsl(0, 0%, 7%);
-      --white-1: hsl(0, 0%, 100%);
-      --white-2: hsl(0, 0%, 98%);
-      --orange-yellow-crayola: hsl(45, 100%, 72%);
-      --vegas-gold: hsl(45, 54%, 58%);
-      --light-gray: hsl(0, 0%, 84%);
-      --light-gray-70: hsla(0, 0%, 84%, 0.7);
-      --bittersweet-shimmer: hsl(0, 43%, 51%);
-    
-      /* Typography */
-      --ff-poppins: 'Poppins', sans-serif;
-      --fs-1: 24px;
-      --fs-2: 18px;
-      --fs-3: 17px;
-      --fs-4: 16px;
-      --fs-5: 15px;
-      --fs-6: 14px;
-      --fs-7: 13px;
-      --fs-8: 11px;
-      --fw-300: 300;
-      --fw-400: 400;
-      --fw-500: 500;
-      --fw-600: 600;
-    
-      /* Transitions */
-      --transition-1: 0.25s ease;
-      --transition-2: 0.5s ease-in-out;
-  }
-  
+ 
   .App {
       display: flex;
       gap: 2%;
@@ -220,6 +205,25 @@
       
       
   }
+
+  .profile {
+    animation: bounce 2s infinite;
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+
+ 
+
   
   .list {
       text-decoration: none;
@@ -247,7 +251,7 @@
   }
   
   nav a:hover {
-      color: var(--orange-yellow-crayola);
+      color: var(--main-color);
   }
   
   
@@ -293,14 +297,14 @@
   .coloredSeparator {
       width: 50px;
       height: 4px;
-      background-color: var(--orange-yellow-crayola);
+      background-color: var(--main-color);
       margin: 10px auto;
   }
 
   .coloredSeparater{
     width: 50px;
     height: 4px;
-    background-color: var(--orange-yellow-crayola);
+    background-color: var(--main-color);
     border-radius: 2px;
     margin: 20px 0;
 }
@@ -326,9 +330,7 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
   
-  nav a:hover {
-      color: var(--orange-yellow-crayola);
-  }
+
   
   .ProjectBox {
     display: grid;
@@ -458,12 +460,14 @@
     padding: 10px;
     border-radius: 10px;
     margin: 2px;
-    color: var(--orange-yellow-crayola);
+    color: var(--main-color);
     font-size: var(--fs-4);
-    border: 1px solid var(--orange-yellow-crayola);
+    border: 1px solid var(--main-color);
     align-self: flex-end; /* Aligns button to the right end */
     margin: 10px;
   }
+
+  
   
   
   /* .detailinput{
@@ -477,6 +481,20 @@
       margin-top:50px;
   } */
   
+  .boxes:hover{
+    border: solid 1px var(--main-color);
+  
+    transform: scale(1.02);
+}
+
+
+.boxes i{
+  font-size: 3rem;
+  color:var(--main-color);
+}
+  .title{
+    color:var(--main-color)
+  }
   
   
   .mapbox {
@@ -500,6 +518,23 @@
     margin: 0;
   }
   
+
+  .btn{
+   
+    padding: 10px;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color); 
+    
+    color: var(--second-bg-color);
+  
+    font-weight: 600;
+    transition: 0.5s ease;
+ }
+ 
+ .btn:hover{
+     box-shadow: none;
+ }
   
   
   
@@ -777,6 +812,7 @@
 
   .asideBlock{
     max-width: 100%;
+    position: static;
     
   }
 
@@ -818,6 +854,7 @@
   .asideBlockContact.visible {
     display: block; /* Show contact details if 'visible' class is added */
     width: 100%;
+   
   }
 
   .asideBlockContact.hidden {
@@ -832,3 +869,53 @@
   }
 }
 
+
+
+.active {
+  font-weight: bold; /* Example style for active link */
+  color: var(--main-color)}
+
+
+  
+
+
+
+
+/* Hide the mobile navigation by default */
+.mobileNav {
+  display: none;
+  flex-direction: column;
+  list-style-type: none;
+
+  gap:50px;
+  
+  
+}
+
+/* Show the hamburger menu on smaller screens */
+.hamburgerMenu {
+  display: none;
+  cursor: pointer;
+  padding: 10px;
+  color:var(--main-color) /* Background color for the menu button */
+}
+
+/* Show the mobile navigation when the menu is open */
+.mobileNav.show {
+  display: flex;
+  background-color: #1f242d;
+  padding: 30px;
+  margin: 10px;
+  border-radius: 5%;
+}
+
+/* Show the hamburger menu and hide desktop navigation for screens smaller than 1000px */
+@media (max-width: 1000px) {
+  .navBar {
+      display: none; /* Hide the default navbar */
+  }
+  
+  .hamburgerMenu {
+      display: block;
+  }
+}
